--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  background-image: url("nature.jpg");
   background-size: 100%;
   color: white;
 }
@@ -15,13 +14,13 @@ pre {
 }
 
 .poem {
-  background-color: rgba(0,0,0,.5);
+  background-color: rgba(0,0,0,.3);
   padding: 2%;
   position: absolute;
   top:10%;
-  left:30%;
-  min-width: auto;
-  max-width: 60%;
+  left:25%;
+  min-width: 600px;
+  max-width: 600px;
   min-height: auto;
   max-height: 60%;
   overflow: auto;
